<resources>
    <string name="app_name">Уртиси</string>
    <string name="help">Справка</string>
    <string name="arrow">Стрелка</string>
    <string name="logo">Логитип</string>
    <string name="settings">Настройки</string>
    <string name="select_theme">Выбор темы</string>
    <string name="menu">Меню</string>
    <string name="employees">Сотрудники</string>
    <string name="call">Расписание звонков</string>
    <string name="link">Ссылки</string>
    <string name="statement">Личная ведомость</string>
    <string name="building">Об институте</string>
    <string name="references">Справки</string>
    <string name="Questions">Частые вопросы</string>
    <string name="education">Образование</string>
    <string name="facts">Факты</string>
    <string name="basic">Основное</string>
    <string name="news">Новости</string>
    <string name="employee_details">Сотрудник</string>
    <string name="full_name">ФИО</string>
    <string name="degree">Ученая степень</string>
    <string name="academic_title">Ученое звание</string>
    <string name="position">Должность</string>
    <string name="disciplines">Преподаваемые дисциплины</string>
    <string name="specialization">Специальность</string>
    <string name="total_experience">Общий стаж</string>
    <string name="speciality_experience">Стаж по специальности</string>
    <string name="qualifications">Повышение квалификации</string>
    <string name="qualification_name">Квалификация</string>
    <string name="education_level">Уровень образования</string>
</resources>