<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!-- Основной контейнер -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Верхняя шапка -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Прокручиваемая область с DrawerLayout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:descendantFocusability="blocksDescendants"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toTopOf="@id/footerLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Карточка выбора темы -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/CardThemeSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/CardText1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/select_theme"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:gravity="center"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/arrowIcon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <ImageView
                            android:id="@+id/arrowIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_arrow"
                            android:contentDescription="@string/arrow"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- Карточка справки -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/CardText2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/help"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:gravity="center"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/arrowIcon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <ImageView
                            android:id="@+id/arrowIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_arrow"
                            android:contentDescription="@string/arrow"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:ignore="DuplicateIds" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- Карточка ссылок -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/CardText3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/link"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:gravity="center"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/arrowIcon"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent" />

                        <ImageView
                            android:id="@+id/arrowIcon"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_arrow"
                            android:contentDescription="@string/arrow"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:ignore="DuplicateIds" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <!-- Нижняя панель -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footerLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icon2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_calendar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/icon3"
                app:layout_constraintStart_toEndOf="@+id/icon1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_map"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/icon4"
                app:layout_constraintStart_toEndOf="@+id/icon2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="1"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>